fixed grid alignment and solved center bug (margin-left -11px for some reason on student

--- a/src/pages/students/pagenavigator/pagenavigator.scss
+++ b/src/pages/students/pagenavigator/pagenavigator.scss
@@ -1,7 +1,6 @@
 @import "../../../assets/styles/variables"; 
 
 .page-nav {
-    justify-self: flex-end;
     color: $color-tertiary;
     width: 100%;
     font-size: 14px;
