--- a/src/pages/students/studentlist/student/student.scss
+++ b/src/pages/students/studentlist/student/student.scss
@@ -4,6 +4,7 @@
 .student {
   width: 100%;
   height: 50px;
+  margin-left: 0; 
   margin-bottom: 11px;
   background: #FFFFFF;
   box-shadow: 0px 30px 40px rgba(114, 75, 203, 0.06);
@@ -39,7 +40,7 @@
 }
 .student:hover{
   cursor: pointer;
-  box-shadow: 3px 3px 3px $color-secondary;
+  box-shadow: 2px 2px 2px $color-secondary;
 }
 .student-grid{
   display: grid;
